Improve design of ProcessTweak
