# pkg/tsuru/model_process_tweak.go
@@ -9,7 +9,8 @@
 
 package tsuru
 
-type AppProcessesTweak struct {
-	Metadata Metadata `json:"metadata,omitempty"`
+type ProcessTweak struct {
 	Name     string   `json:"name,omitempty"`
+	Plan     string   `json:"plan,omitempty"`
+	Metadata Metadata `json:"metadata,omitempty"`
 }
